# SeaShell

./: .gitignore  CMakeLists.txt  README.md
src/: fast.sh  lexer.cpp  lexer.flex  lexer.l  main.cpp  parcer.y  parcer.ypp  parser.cpp  parser.hpp  parser.ypp  ptest.cpp  shell_ast.h
src/modules/: Builtins.cpp  Builtins.h  Cleaner.cpp  Cleaner.h  Context.cpp  Context.h  Executor.cpp  Executor.h  Interpreter.cpp  Interpreter.h  Shell.cpp  Shell.h  Signals.cpp  Signals.h
src/structures/: Assignable.cpp  Assignable.h  BackTickExpr.cpp  BackTickExpr.h  Command.cpp  Command.h  Identifier.cpp  Identifier.h  Indentifier.cpp  Node.cpp  Node.h  NodeType.h  PipeExpr.cpp  PipeExpr.h  Pipeline.cpp  Pipeline.h  Program.cpp  Program.h  RedirectionExpr.cpp  RedirectionExpr.h  Value.cpp  Value.h  VarPip.cpp  VarPip.h  Variable.cpp  Variable.h  VariableAssignment.cpp  VariableAssignment.h  VariableCall.cpp  VariableCall.h
src/structures/modules/parser/: Assignable.cpp  Assignable.h  BackTickExpr.cpp  BackTickExpr.h  Command.cpp  Command.h  Identifier.h  Indentifier.cpp  Node.cpp  Node.h  NodeType.h  PipeExpr.cpp  PipeExpr.h  Program.cpp  Program.h  RedirectionExpr.cpp  RedirectionExpr.h  VariableAssignment.cpp  VariableAssignment.h  VariableCall.cpp  VariableCall.h
tests/: AllTests.h  BackTickExprTests.cpp  BackTickExprTests.h  BacktickTests.cpp  BacktickTests.h  CdTests.cpp  CdTests.h  ContextTests.cpp  ContextTests.h  EchoTests.cpp  EchoTests.h  ErrorTests.cpp  ErrorTests.h  ExportTests.cpp  ExportTests.h  PipeTests.cpp  PipeTests.h  PwdTests.cpp  PwdTests.h  RedirectionTests.cpp  RedirectionTests.h  TestInclude.h  TestMain.cpp  VariableAssignmentTests.cpp  VariableAssignmentTests.h
